Fixing the post listing spacing

--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -213,7 +213,7 @@ blockquote {
 cite{color:#999;}
 small{font-size:12px;color: #999;}
 ul {
-  line-height: 20px;
+  line-height: 25px;
   font-size: 14px;
   margin:0 0 20px 40px;
   list-style:disc;}
